--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "clarifai": "^2.9.1",
+    "particles.js": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-parallax-tilt": "^1.5.54",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.33.2",
+    "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
